src/objects/WTRC_Shipment_Line__c.object
<CustomObject>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Parcel_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>WTRC_Shipment__c</referenceTo>
        <relationshipLabel>Shipment Line Items</relationshipLabel>
        <relationshipName>Shipment_Line_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Shipment Line Item</label>
    <nameField>
        <displayFormat>P{000000}</displayFormat>
        <label>Parcel Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>